--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "winston": "^3.17.0"
   }
