--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
+    "prettier-plugin-ejs": "^1.0.3",
     "typescript-eslint": "^8.39.1"
   }
 }
