--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.17.2",
+    "razorpay": "^2.9.6",
     "winston": "^3.17.0"
   },
   "devDependencies": {
