--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "connect-flash": "^0.1.1",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
@@ -36,6 +38,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.17.2",
+    "pdfkit-table": "^0.1.99",
     "razorpay": "^2.9.6",
     "winston": "^3.17.0"
   },
